[gd_scene load_steps=9 format=2]

[ext_resource path="res://PlayerCell.tscn" type="PackedScene" id=1]
[ext_resource path="res://bloodcells2.png" type="Texture" id=2]
[ext_resource path="res://TargetCell.tscn" type="PackedScene" id=3]
[ext_resource path="res://CovidVirus.tscn" type="PackedScene" id=4]
[ext_resource path="res://World.gd" type="Script" id=5]
[ext_resource path="res://Phagocyte.tscn" type="PackedScene" id=6]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=7]
[ext_resource path="res://AminoAcidDrop.tscn" type="PackedScene" id=8]

[node name="World" type="Node2D"]
script = ExtResource( 5 )
covid = ExtResource( 4 )
targetcell = ExtResource( 3 )
phagocyte = ExtResource( 6 )
drop = ExtResource( 8 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 1949.0
margin_bottom = 1460.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect2" type="TextureRect" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1949.0
margin_top = -1460.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect3" type="TextureRect" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -1460.0
margin_right = 1949.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect4" type="TextureRect" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -1949.0
margin_bottom = 1460.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerCell" parent="." instance=ExtResource( 1 )]

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="PlayerCell"]
remote_path = NodePath("../../Camera2D")

[node name="Camera2D" type="Camera2D" parent="."]
scale = Vector2( 0.2, 0.2 )
current = true
zoom = Vector2( 2, 2 )
limit_left = -1949
limit_top = -1460
limit_right = 1949
limit_bottom = 1460

[node name="TargetCell" parent="." instance=ExtResource( 3 )]
position = Vector2( -680.232, 587.336 )

[node name="TargetCell2" parent="." instance=ExtResource( 3 )]
position = Vector2( 767.133, -527.404 )

[node name="TargetCell3" parent="." instance=ExtResource( 3 )]
position = Vector2( -686.225, -488.448 )

[node name="TargetCell4" parent="." instance=ExtResource( 3 )]
position = Vector2( 743.16, 629.289 )

[node name="CovidSpawn" type="Position2D" parent="."]
position = Vector2( 0, 1460 )

[node name="CovidSpawn2" type="Position2D" parent="."]
position = Vector2( 0, -1460 )

[node name="CovidSpawn3" type="Position2D" parent="."]
position = Vector2( -1949, 0 )

[node name="CovidSpawn4" type="Position2D" parent="."]
position = Vector2( 1949, 0 )

[node name="Phagocyte" parent="." instance=ExtResource( 6 )]
position = Vector2( 1427.76, -1099.73 )

[node name="Phagocyte2" parent="." instance=ExtResource( 6 )]
position = Vector2( -1452.26, -1154.84 )

[node name="Phagocyte3" parent="." instance=ExtResource( 6 )]
position = Vector2( -1340.14, 996.92 )

[node name="Phagocyte4" parent="." instance=ExtResource( 6 )]
position = Vector2( 1473.71, 1103.71 )

[node name="HUD" parent="." instance=ExtResource( 7 )]

[node name="WaveTimerCountdown" type="Timer" parent="."]
wait_time = 10.0

[node name="CovidSpawnTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="DropTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="GameOverTimer" type="Timer" parent="."]
wait_time = 8.0
[connection signal="timeout" from="WaveTimerCountdown" to="." method="_on_WaveTimerCountdown_timeout"]
[connection signal="timeout" from="CovidSpawnTimer" to="." method="_on_CovidSpawnTimer_timeout"]
[connection signal="timeout" from="DropTimer" to="." method="_on_DropTimer_timeout"]
[connection signal="timeout" from="GameOverTimer" to="." method="_on_GameOverTimer_timeout"]
